# wallpaper-engine

./: Cargo.toml  Makefile  README.md  default.nix  flake.nix
nix/: hm-module.nix  module.nix  package.nix
src/: common.rs  main.rs  runner.rs
src/manager/: main.rs
src/runner/: main.rs
wallpaper-ctl/src/: main.rs
