[package]
name = "wallpaper-engine-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.5"
display-info = "0.5.2"
winit = "0.30.12"
eframe = { version = "0.29.1", features = [
    "default",
] }
egui-modal = "0.5.0"
egui_dialogs = "0.3.5"
egui_dock = "0.14.0"
# For image support:
egui_extras = { version = "0.29.1", features = ["default", "file", "image", "gif"] }
image = { version = "0.25", features = ["jpeg", "png"] }

#tray-icon = "0.21.3"
#trayicon = "0.4.0"
#systray = "0.4.0"

#env_logger = { version = "0.11.5", default-features = false, features = [
#    "auto-color",
#    "humantime",
#] }
env_logger = "0.11.5"
serde = "1.0.215"
serde_json = "1.0.133"
