[package]
name = "wallpaper-engine-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallpaper-gui"
path = "src/main.rs"

[[bin]]
name = "wallpaper-runner"
path = "src/runner.rs"

[dependencies]
ctrlc = "3.5.1"
display-info = "0.5.7"
eframe = { version = "0.33.3", features = ["default"] }
egui_extras = { version = "0.33.3", features = ["default", "file", "image", "gif"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }

env_logger = "0.11.8"
serde = "1.0.228"
serde_json = "1.0.149"
